[package]
name = "emerald"
version = "0.1.0"
authors = ["officialemeraldnetwork"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("no-entrypoint", "no-idl", "no-log-ix-name", "cpi"))',
] }


[features]
idl-build = ["anchor-spl/idl-build"]
no-entrypoint = []
cpi = []
custom-heap = []
custom-panic = []
anchor-debug = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1" }
borsh = "0.10.3"
thiserror = "1.0"

[dev-dependencies]
anchor-lang = { version = "0.32.1" }
anchor-client = "0.32.1"
anchor-spl = { version = "0.32.1" }
